--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -11,4 +11,4 @@ PRODUCT_NAME = package_im_stepper
 PRODUCT_BUNDLE_IDENTIFIER = com.imujtaba.packageImStepper
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.imujtaba. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 yanna.app. All rights reserved.
